Reformatted some gifs and added a README for clarity

--- a/ARAR_9_iterations.ipynb
+++ b/ARAR_9_iterations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1192,7 @@
     "\n",
     "# Example usage\n",
     "temperatures = [0, 0.25, 0.5, 0.75, 1]\n",
-    "base_dir = \"Autoregressive_autoregressor\"\n",
+    "base_dir = \"ARAR\\\\10_iterations\\\\Epoch 16\"\n",
     "\n",
     "for temp in temperatures:\n",
     "    csv_path_pattern = os.path.join(base_dir, f\"data_temp_{temp}_*.csv\")\n",
@@ -1515,7 +1515,7 @@
     "\n",
     "# Example usage\n",
     "temperatures = [0, 0.25, 0.5, 0.75, 1]\n",
-    "base_dir = \"Autoregressive_autoregressor\"\n",
+    "base_dir = \"ARAR\\\\10_iterations\\\\Epoch 50\"\n",
     "\n",
     "for temp in temperatures:\n",
     "    csv_path_pattern = os.path.join(base_dir, f\"data_temp_{temp}_epoch_50_*.csv\")\n",
