corrected small typos in the names of folders

--- a/Training_Data_Ordering_Investigation.ipynb
+++ b/Training_Data_Ordering_Investigation.ipynb
@@ -190,7 +190,7 @@
    ],
    "source": [
     "\n",
-    "model_path = \"C:\\\\Users\\\\jaime\\\\ML_Playground_1\\\\model_parameters\\\\08_14_2024_Conway_2_State_Jump_Rot_Pos_On_Masking_Off_High_Entrpoy_Homog_2024-08-14 12-24-10\\\\LifeGPT_epoch_16.pt\"\n",
+    "model_path = \"model_parameters\\\\08_14_2024_Conway_2_State_Jump_Rot_Pos_On_Masking_Off_High_Entropy_Homog_2024-08-14 12-24-10\\\\LifeGPT_epoch_16.pt\"\n",
     "max_length = len(\"@PredictNextState<> []$\") + (32*32*2)\n",
     "generate_length = max_length - len(\"@PredictNextState<>\") - (32 * 32)\n",
     "\n",
@@ -1644,7 +1644,7 @@
    ],
    "source": [
     "\n",
-    "model_path = \"C:\\\\Users\\\\jaime\\\\ML_Playground_1\\\\model_parameters\\\\08_14_2024_Conway_2_State_Jump_Rot_Pos_On_Masking_Off_High_Entrpoy_Homog_2024-08-14 12-24-10\\\\LifeGPT_epoch_50.pt\"\n",
+    "model_path = \"model_parameters\\\\08_14_2024_Conway_2_State_Jump_Rot_Pos_On_Masking_Off_High_Entropy_Homog_2024-08-14 12-24-10\\\\LifeGPT_epoch_50.pt\"\n",
     "max_length = len(\"@PredictNextState<> []$\") + (32*32*2)\n",
     "generate_length = max_length - len(\"@PredictNextState<>\") - (32 * 32)\n",
     "\n",
@@ -1764,7 +1764,7 @@
     }
    ],
    "source": [
-    "model_path = \"C:\\\\Users\\\\jaime\\\\ML_Playground_1\\\\model_parameters\\\\07_22_2024__2_State_Jump_Rot_Pos_On_Masking_On_Broad_Entrpoy_Homog_2024-07-23 10-37-31\\\\LifeGPT_epoch_50.pt\"\n",
+    "model_path = \"C:\\\\Users\\\\jaime\\\\ML_Playground_1\\\\model_parameters\\\\07_22_2024__2_State_Jump_Rot_Pos_On_Masking_On_Broad_Entropy_Homog_2024-07-23 10-37-31\\\\LifeGPT_epoch_50.pt\"\n",
     "max_length = len(\"@PredictNextState<> []$\") + (32*32*2)\n",
     "generate_length = max_length - len(\"@PredictNextState<>\") - (32 * 32)\n",
     "\n",
