Remove .pt files from tracking

--- a/training_set_gen.ipynb
+++ b/training_set_gen.ipynb
@@ -412,18 +412,11 @@
     "\n",
     "    print(f\"Animation saved as {animation_filename}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML_Playground_1",
+   "display_name": "LifeGPT_env",
    "language": "python",
    "name": "python3"
   },
